--- a/TWITAWAREEAR/.settings/org.eclipse.wst.common.component
+++ b/TWITAWAREEAR/.settings/org.eclipse.wst.common.component
@@ -20,5 +20,8 @@
         <dependent-module archiveName="mysql-connector-java-3.1.12.jar" deploy-path="/" handle="module:/classpath/lib/TWITAWAREREQUIREDJARS/MYSQL/mysql-connector-java-3.1.12.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="twitter4j-core-2.1.3-SNAPSHOT.jar" deploy-path="/" handle="module:/classpath/lib/TWITAWAREREQUIREDJARS/TWITTER/twitter4j-core-2.1.3-SNAPSHOT.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
